# programacao-funcional

./: .gitignore  README.rst  exercicios.txt  lambda-lambda-lambda.py  lambda-lambda.ipynb
haskell/scotty/json-api/: json-api.cabal
haskell/scotty/json-api/.stack-work/install/x86_64-linux-tinfo6/lts-12.11/8.4.3/flag-cache/: aeson-1.3.1.1-1OkqdtyvGki5l4J1NAv2t2  ansi-terminal-0.8.1-DTnXTZHQH9cDx7RXC7iISb  appar-0.1.4-J5mdtVuytVIKFPXD2MXW4E  async-2.2.1-9wa10ZDgApa7ovuWJOFs5L  attoparsec-0.13.2.2-4Pinsgh4vTk6NhkexjmpGO  auto-update-0.1.4-7k5Okr80TfS9UGlvnbDZr0  base-compat-0.10.4-9FtFg9E90S5CFRyvxjUaaZ  base-orphans-0.7-85wcea2rRmdArILlfYz5fz  base64-bytestring-1.0.0.1-4OCIe2BZn8jKI191JIXI37  blaze-builder-0.4.1.0-1Vr2N4y1LFWEvlXW2KumQM  bsb-http-chunked-0.0.0.4-APmSGNCvcZO9g0Zx1dmgPc  byteorder-1.0.4-JGHrMy8StI888DOmmSVbRy  bytestring-builder-0.10.8.2.0-966OpbWdRds73FqBXYW8S8  case-insensitive-1.2.0.11-JzsMrRS387MIzth0WXukPt  colour-2.3.4-C3PVIHDZkyCIpOJGl3M0hE  cookie-0.4.4-IIzGenoEVgfBR4dsQKjig7  data-default-class-0.1.2.0-2kYzERBLX3wJoPfj7mwVvW  dlist-0.8.0.5-I6CwXwt8UvhK996Lp3Q3y  easy-file-0.2.2-4l2xgq1xN4PHgDPMu188oI  exceptions-0.10.0-IxXMfOng2Mk6dCHZvcRfv9  fail-4.9.0.0-BAHmj60kS5K7NVhhKpm9J5  fast-logger-2.4.11-HaEgayyYLUiJI8BkcVuXOq  hashable-1.2.7.0-JmpdRj8UvOXCY24HsJVx8K  hashmap-1.3.3-21u0PLLE7StIpHiQaJdzGI  http-date-0.0.8-IxCBwoc1Wb9A4Fkqp3mzez  http-types-0.12.2-CH7FnrJYZW93x7FmlFDJlI  http2-1.6.3-LEK7EGfls3UF1GiPDdO5K5  integer-logarithms-1.0.2.2-14A7fJJvtyxHwoJRYCwdQQ  iproute-1.7.5-D8iHzRBaRYY79Y9PxHNK50  (+39 more)
haskell/scotty/json-api/src/: Main.hs
(+61 files in other folders)
