name:                json-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fabiommendes/programacao-funcional
license:             BSD3
license-file:        LICENSE
author:              Fábio Mendes
maintainer:          example@example.com
copyright:           2018 Fábio Mendes
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable json-api
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       scotty,
                       aeson,
                       text,
                       unordered-containers
